--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <section class="container">
+        <h1>Lorem ipsum dolor sit amet</h1>
+    </section>
+
     <script src="./assets/js/bundle.js"></script>
 </body>
 </html>
